# thesis-code

./: .gitignore  TODO.md  pyproject.toml  slurm-10656031.out  slurm-11792900.out  slurm-11793175.out  test-output.txt
configs/: default.json  default_config.json
scripts/: env-download.py  job  load-modules  sbatch-job  sbatch-job-env  sbatch-job-timing  slurm-10619270.out  slurm-commands  test-io.py
src/: agent.py  analyze.py  args.py  env.py  eval.py  main.py  mask.py  plots.py  ppo.py  timing.py  train.py  utils.py
