[project]
name = "code"
version = "0.1.0"
description = ""
authors = [
    {name = "Bram Pulles",email = "inbox@borroot.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grid2op (>=1.10.5.post1,<2.0.0)",
    "numba (>=0.61.0,<0.62.0)",
    "setuptools (>=76.0.0,<77.0.0)"
]

[tool.poetry]
packages = [{include = "code", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
