[project]
name = "code"
version = "0.1.0"
description = ""
authors = [
    {name = "Bram Pulles",email = "inbox@borroot.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grid2op (>=1.10.5.post1,<2.0.0)",
    "numba (>=0.61.0,<0.62.0)",
    "setuptools (>=76.0.0,<77.0.0)",
    "l2rpn-baselines (>=0.8.0,<0.9.0)",
    "ray[data,default,rllib,train,tune] (>=2.43.0,<3.0.0)",
    "jsonpickle (>=4.0.2,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "numpy (<2.00)",
    "imageio (>=2.37.0,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "gputil (>=1.4.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "lightsim2grid (==0.10.3.dev0)"
]

[tool.poetry]
packages = [{include = "code", from = "src"}]
package-mode = false


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
